# keinvo.github.io

./: .gitignore  README.md  index.html
chapters/: 01-window.org
chapters/org/: #chapter01-初识窗口.org#  chapter01-初识窗口.org  chapter01-初识窗口__section00.org  chapter01-初识窗口__section01-第一个窗口程序.org  chapter01-初识窗口__section02-thunk技术.org  chapter01-初识窗口__section03-窗口的ATL封装.org  chapter02-图形引擎.org  chapter02-图形引擎__section01-SkBitmap.org  chapter02-图形引擎__section02-SkCanvas.org  chapter02-图形引擎__section03-文字.org  chapter02-图形引擎__section04-SkPaint.org  chapter04-高级控件.org  index.org
chapters/public_html/: chapter01-初识窗口.html  chapter01-初识窗口__section00.html  chapter01-初识窗口__section01-第一个窗口程序.html  chapter01-初识窗口__section02-thunk技术.html  chapter01-初识窗口__section03-窗口的ATL封装.html  chapter02-图形引擎.html  chapter02-图形引擎__section01-SkBitmap.html  chapter02-图形引擎__section02-SkCanvas.html  chapter02-图形引擎__section03-文字.html  chapter02-图形引擎__section04-SkPaint.html  chapter03-基础控件.html  chapter03-布局XML化.html  chapter04-基础控件.html  chapter04-高级控件.html  chapter05-布局XML化.html  chapter05-高级控件.html  index.html
chapters/public_html/css/: main.css
source/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  uiengine.sln
source/chapter-01/: CMakeLists.txt
source/chapter-01/HelloCWindow/: CMakeLists.txt  HelloCWindow.cpp  HelloCWindow.vcxproj  HelloCWindow.vcxproj.filters  switchproj.el
source/chapter-01/HelloCWindowImpl/: CMakeLists.txt  HelloCWindowImpl.cpp  HelloCWindowImpl.vcxproj  HelloCWindowImpl.vcxproj.filters  switchproj.el
source/chapter-01/HelloCWindowImpl2/: CMakeLists.txt  HelloCWindowImpl2.cpp  HelloCWindowImpl2.vcxproj  HelloCWindowImpl2.vcxproj.filters  switchproj.el
source/chapter-01/HelloWin/: CMakeLists.txt  HelloWin.cpp  HelloWin.vcxproj  HelloWin.vcxproj.filters  switchproj.el
source/chapter-01/HelloWinDlg/: CMakeLists.txt  HelloWinDlg.cpp  HelloWinDlg.rc  HelloWinDlg.vcxproj  HelloWinDlg.vcxproj.filters  resource.h  switchproj.el
source/chapter-01/StopWatch/: CMakeLists.txt  ReadMe.txt  StopWatch.cpp  StopWatch.vcxproj  StopWatch.vcxproj.filters  switchproj.el
source/chapter-01/StopWatchUseThunk/: CMakeLists.txt  ReadMe.txt  StopWatchUseThunk.cpp  StopWatchUseThunk.vcxproj  StopWatchUseThunk.vcxproj.filters  switchproj.el
source/chapter-02/: CMakeLists.txt
source/chapter-02/SelfDrawnWnd/: CMakeLists.txt  SelfDrawnWnd.cpp  SelfDrawnWnd.vcxproj  SelfDrawnWnd.vcxproj.filters  switchproj.el
source/chapter-02/SkBitmapDemo/: CMakeLists.txt  SkBitmapDemo.cpp  SkBitmapDemo.vcxproj  SkBitmapDemo.vcxproj.filters  switchproj.el
source/chapter-02/SkCanvasDemo/: CMakeLists.txt  SkCanvasDemo.cpp  SkCanvasDemo.vcxproj  SkCanvasDemo.vcxproj.filters  switchproj.el
source/chapter-02/SkPaintDemo/: CMakeLists.txt  SkPaintDemo.cpp  SkPaintDemo.vcxproj  SkPaintDemo.vcxproj.filters  switchproj.el
source/chapter-02/TextDemo/: CMakeLists.txt  TextDemo.cpp  TextDemo.vcxproj  TextDemo.vcxproj.filters  switchproj.el
source/chapter-03/: CMakeLists.txt
source/chapter-03/BasicControls/: BasicControls.cpp  BasicControls.h  CMakeLists.txt  switchproj.el
source/chapter-03/SelfDrawnWnd/: CMakeLists.txt  SelfDrawnWnd.cpp  SelfDrawnWnd.vcxproj  SelfDrawnWnd.vcxproj.filters  switchproj.el
source/nuuk/: NkButton.cpp  NkButton.h  NkCanvas.cpp  NkCanvas.h  NkUtils.cpp  NkUtils.h  NkWindow.cpp  NkWindow.h  UIObject.cpp  UIObject.h  UIType.h
source/nuuk/common/: Singleton.h
source/nuuk/controls/: UIButton.cpp  UIButton.h  UILabel.cpp  UILabel.h
source/nuuk/core/: UICanvas.cpp  UICanvas.h  UIView.cpp  UIView.h  UIView.h~  UIWindow.cpp  UIWindow.h
